unpackaged/main/default/objects/AAA_Location__c/AAA_Location__c.object-meta.xml
<CustomObject>
    <description>AAA Locations and their LOB Attributes</description>
    <label>AAA Location</label>
    <nameField>
        <label>AAA Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AAA Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>