unpackaged/main/default/objects/AAA_Location__c/fields/Allow_Insurance_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Allow_Insurance_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Insurance Referrals</label>
    <type>Checkbox</type>
</CustomField>