unpackaged/main/default/objects/AAA_Location__c/fields/Allow_Referrals_For_Business_Units__c.field-meta.xml
<CustomField>
    <fullName>Allow_Referrals_For_Business_Units__c</fullName>
    <label>Allow Referrals For These Business Units</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>