unpackaged/main/default/objects/AAA_Location__c/fields/Auto_Buying_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Buying_Branch_Number__c</fullName>
    <label>Auto Buying Branch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>