unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care__c.field-meta.xml
<CustomField>
    <fullName>Car_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this location is a Car Care facility.</description>
    <label>Car Care</label>
    <type>Checkbox</type>
</CustomField>