unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Location_Number__c</fullName>
    <description>AAA Car Care Location Number / Branch Code</description>
    <label>Car Care Location Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>