unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Manager__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Car Care Store Manager</description>
    <label>Car Care Manager</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Car Care</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>