unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_NPS__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_NPS__c</fullName>
    <formula>IF(Car_Care__c=TRUE, 
(((Car_Care_Promoters__c/Total_Car_Care_Survey_Responses__c) 
- 
(Car_Care_Detractors__c/Total_Car_Care_Survey_Responses__c)) 
*100),0)</formula>
    <label>Car Care NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>