unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Phone__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Phone__c</fullName>
    <label>Car Care Phone</label>
    <type>Phone</type>
</CustomField>