unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Promoters__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Promoters__c</fullName>
    <label>Car Care Promoters</label>
    <summarizedField>Survey__c.Promoter__c</summarizedField>
    <summaryFilterItems>
        <field>Survey__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>CCC CSat</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey__c.Car_Care_Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>