unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Region__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Region__c</fullName>
    <label>Car Care Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>