unpackaged/main/default/objects/AAA_Location__c/fields/Car_Care_Region_Manager__c.field-meta.xml
<CustomField>
    <fullName>Car_Care_Region_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Care Region Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations_Car_Care_Region_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>