unpackaged/main/default/objects/AAA_Location__c/fields/Count_of_Travel_Agents__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Travel_Agents__c</fullName>
    <label>Count of Travel Agents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>