unpackaged/main/default/objects/AAA_Location__c/fields/Discount_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rewards__c</fullName>
    <label>Discount Rewards</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>