unpackaged/main/default/objects/AAA_Location__c/fields/ERS_Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>ERS_Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERS Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations4</relationshipName>
    <type>Lookup</type>
</CustomField>