unpackaged/main/default/objects/AAA_Location__c/fields/Facility_Mgmt_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Facility_Mgmt_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Mgmt Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>