unpackaged/main/default/objects/AAA_Location__c/fields/Fins_General_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fins_General_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fins General Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managed_Fins_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>