unpackaged/main/default/objects/AAA_Location__c/fields/Fins_Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Fins_Location_Number__c</fullName>
    <externalId>true</externalId>
    <label>Fins Location Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>