unpackaged/main/default/objects/AAA_Location__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Address__c &amp; &quot; &quot; &amp; City__c &amp; &quot; &quot; &amp; State__c &amp;  &quot;, &quot; &amp; Zip__c</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>