unpackaged/main/default/objects/AAA_Location__c/fields/Google_My_Business_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_My_Business_URL__c</fullName>
    <description>Stores link to Google My Business page in Google Maps. Used in Marketing Cloud as an email merge field.</description>
    <label>Google My Business URL</label>
    <type>Url</type>
</CustomField>