unpackaged/main/default/objects/AAA_Location__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>