unpackaged/main/default/objects/AAA_Location__c/fields/Insurance_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Branch_Number__c</fullName>
    <label>Insurance Branch Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>