unpackaged/main/default/objects/AAA_Location__c/fields/Insurance_NPS__c.field-meta.xml
<CustomField>
    <fullName>Insurance_NPS__c</fullName>
    <formula>IF(Insurance__c=TRUE, 
(((Insurance_Promoters__c/Total_Insurance_Survey_Responses__c) 
- 
(Insurance_Detractors__c/Total_Insurance_Survey_Responses__c)) 
*100),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>