unpackaged/main/default/objects/AAA_Location__c/fields/Insurance_Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations9</relationshipName>
    <type>Lookup</type>
</CustomField>