unpackaged/main/default/objects/AAA_Location__c/fields/Location_Email__c.field-meta.xml
<CustomField>
    <fullName>Location_Email__c</fullName>
    <inlineHelpText>General email address that reaches all branch employees</inlineHelpText>
    <label>Location Email</label>
    <type>Email</type>
</CustomField>