unpackaged/main/default/objects/AAA_Location__c/fields/Locator_Page__c.field-meta.xml
<CustomField>
    <fullName>Locator_Page__c</fullName>
    <label>Locator Page</label>
    <type>Url</type>
</CustomField>