unpackaged/main/default/objects/AAA_Location__c/fields/Operation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operation_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operation Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>AAA Locations</relationshipLabel>
    <relationshipName>AAA_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>