unpackaged/main/default/objects/AAA_Location__c/fields/Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Service</label>
    <type>Checkbox</type>
</CustomField>