unpackaged/main/default/objects/AAA_Location__c/fields/Store_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Store_Image_URL__c</fullName>
    <description>Public image link copied from store locator pages</description>
    <label>Store Image URL</label>
    <type>Url</type>
</CustomField>