unpackaged/main/default/objects/AAA_Location__c/fields/Total_Car_Care_Survey_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Car_Care_Survey_Responses__c</fullName>
    <label>Total Car Care Survey Responses</label>
    <summaryFilterItems>
        <field>Survey__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>CCC CSat</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Survey__c.Survey_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey__c.Car_Care_Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>