unpackaged/main/default/objects/AAA_Location__c/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this location is a Travel Branch.</description>
    <label>Travel</label>
    <type>Checkbox</type>
</CustomField>