unpackaged/main/default/objects/AAA_Location__c/fields/Travel_ALT_Branch_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Travel_ALT_Branch_Frequency__c</fullName>
    <label>Travel ALT Branch Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WKLY</fullName>
            </value>
            <value>
                <fullName>SEMI-MTHLY</fullName>
            </value>
            <value>
                <fullName>TRIWKLY</fullName>
            </value>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>