unpackaged/main/default/objects/AAA_Location__c/fields/Travel_ALT_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Travel_ALT_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel ALT Branch Manager</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>AAA Travel Branch Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>AAA Travel Regional Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations5</relationshipName>
    <type>Lookup</type>
</CustomField>