unpackaged/main/default/objects/AAA_Location__c/fields/Travel_ALT_Branch_Manager_Emp_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_ALT_Branch_Manager_Emp_Number__c</fullName>
    <formula>Travel_ALT_Branch_Manager__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel ALT Branch Manager Emp Number</label>
    <type>Text</type>
</CustomField>