unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Close_Date__c</fullName>
    <label>Travel Branch Close Date</label>
    <type>Date</type>
</CustomField>