unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Code__c</fullName>
    <label>Travel Branch Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>