unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Fax_Number__c</fullName>
    <label>Travel Branch Fax Number</label>
    <type>Phone</type>
</CustomField>