unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_IATA_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_IATA_Number__c</fullName>
    <label>Travel Branch IATA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>