unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations2</relationshipName>
    <type>Lookup</type>
</CustomField>