unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Manager_Email__c</fullName>
    <label>Travel Branch Manager Email</label>
    <type>Email</type>
</CustomField>