unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Pseudo_City__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Pseudo_City__c</fullName>
    <label>Travel Branch PSEUDO City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>