unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Branch_Travel_Store_Group__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Travel_Store_Group__c</fullName>
    <label>Travel Branch Travel Store Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>