unpackaged/main/default/objects/AAA_Location__c/fields/Travel_CLIA_ID__c.field-meta.xml
<CustomField>
    <fullName>Travel_CLIA_ID__c</fullName>
    <label>Travel CLIA ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>