unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Detractors__c.field-meta.xml
<CustomField>
    <fullName>Travel_Detractors__c</fullName>
    <label>Travel Detractors</label>
    <summarizedField>Survey__c.Detractor__c</summarizedField>
    <summaryFilterItems>
        <field>Survey__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Travel NPS</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey__c.Car_Care_Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>