unpackaged/main/default/objects/AAA_Location__c/fields/Travel_ISA__c.field-meta.xml
<CustomField>
    <fullName>Travel_ISA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel ISA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations3</relationshipName>
    <type>Lookup</type>
</CustomField>