unpackaged/main/default/objects/AAA_Location__c/fields/Travel_ISA_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_ISA_Employee_Number__c</fullName>
    <formula>Travel_ISA__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel ISA Employee Number</label>
    <type>Text</type>
</CustomField>