unpackaged/main/default/objects/AAA_Location__c/fields/Travel_NPS__c.field-meta.xml
<CustomField>
    <fullName>Travel_NPS__c</fullName>
    <formula>IF(Travel__c=TRUE,
(((Travel_Promoters__c/Total_Travel_Survey_Responses__c)
-
(Travel_Detractors__c/Total_Travel_Survey_Responses__c))
*100),0)</formula>
    <label>Travel NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>