unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Region__c.field-meta.xml
<CustomField>
    <fullName>Travel_Region__c</fullName>
    <formula>Text(Travel_Branch_Manager__r.ACG_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Region</label>
    <type>Text</type>
</CustomField>