unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_Region_Number__c</fullName>
    <label>Travel Region Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>