unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Travel_Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations6</relationshipName>
    <type>Lookup</type>
</CustomField>