unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Regional_Manager_Cell__c.field-meta.xml
<CustomField>
    <fullName>Travel_Regional_Manager_Cell__c</fullName>
    <label>Travel Regional Manager Cell</label>
    <type>Phone</type>
</CustomField>