unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Regional_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Travel_Regional_Manager_Email__c</fullName>
    <label>Travel Regional Manager Email</label>
    <type>Email</type>
</CustomField>