unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Regional_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Travel_Regional_Manager_Phone__c</fullName>
    <label>Travel Regional Manager Phone</label>
    <type>Phone</type>
</CustomField>