unpackaged/main/default/objects/AAA_Location__c/fields/Travel_TB_and_M_Order_Day__c.field-meta.xml
<CustomField>
    <fullName>Travel_TB_and_M_Order_Day__c</fullName>
    <label>Travel TB and M Order Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>