unpackaged/main/default/objects/AAA_Location__c/fields/Travel_TB_and_M_Usage_Group__c.field-meta.xml
<CustomField>
    <fullName>Travel_TB_and_M_Usage_Group__c</fullName>
    <label>Travel TB and M Usage Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>