unpackaged/main/default/objects/AAA_Location__c/fields/Travel_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Travel_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AAA_Locations7</relationshipName>
    <type>Lookup</type>
</CustomField>