unpackaged/main/default/objects/AAA_Location__c/fields/TravelBranchManagerEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>TravelBranchManagerEmployeeNumber__c</fullName>
    <formula>Travel_Branch_Manager__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Branch Manager Employee Number</label>
    <type>Text</type>
</CustomField>