unpackaged/main/default/objects/AAA_Location__c/fields/TravelRegionalManagerEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>TravelRegionalManagerEmployeeNumber__c</fullName>
    <formula>Travel_Regional_Manager__r.EmployeeNumber</formula>
    <label>Travel Regional Manager Employee Number</label>
    <type>Text</type>
</CustomField>