unpackaged/main/default/objects/AAA_Location__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <type>TextArea</type>
</CustomField>