unpackaged/main/default/objects/AAA_Location__c/recordTypes/ACG_Branch_Locations.recordType-meta.xml
<RecordType>
    <fullName>ACG_Branch_Locations</fullName>
    <active>true</active>
    <description>AAA Carolinas branch locations.</description>
    <label>Branch Locations</label>
</RecordType>