unpackaged/main/default/objects/AAA_Location__c/recordTypes/ACG_Fins_Locations.recordType-meta.xml
<RecordType>
    <fullName>ACG_Fins_Locations</fullName>
    <active>true</active>
    <description>Fins Car Wash locations.</description>
    <label>Fins Locations</label>
</RecordType>