unpackaged/main/default/objects/AAA_Location__c/recordTypes/ACG_HQ_Locations.recordType-meta.xml
<RecordType>
    <fullName>ACG_HQ_Locations</fullName>
    <active>true</active>
    <description>AAA Carolinas headquarters or other non-branch locations.</description>
    <label>HQ Locations</label>
</RecordType>