unpackaged/main/default/objects/AAA_Location__c/validationRules/ACG_Name_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>ACG_Name_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS( $Profile.Name  , &quot;Admin&quot;))
&amp;&amp;
NOT(CONTAINS( $Profile.Name , &quot;Integration&quot;))
&amp;&amp;
ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>The AAA Location Name cannot be changed.</errorMessage>
</ValidationRule>